--- a/apps/mix-cms/src/app/components/related-post/related-post.component.html
+++ b/apps/mix-cms/src/app/components/related-post/related-post.component.html
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <div class="col-1 d-flex align-items-center justify-content-center border-left-default border-right-default">
+    <div class="col-1 d-flex align-items-center justify-content-center">
       <span class="material-symbols-outlined text-xxl"> swap_horiz </span>
     </div>
 
