--- a/apps/mix-cms/src/assets/styles/variables.scss
+++ b/apps/mix-cms/src/assets/styles/variables.scss
@@ -46,13 +46,13 @@ html {
   --text-02: var(--tui-text-02);
   --text-03: var(--tui-text-03);
 
-  --text-size-xxs: 8px;
-  --text-size-xs: 10px;
-  --text-size-s: 12px;
-  --text-size-m: 14px;
-  --text-size-l: 16px;
-  --text-size-xl: 20px;
-  --text-size-xxl: 24px;
+  --text-size-xxs: 0.625rem;
+  --text-size-xs: 0.75rem;
+  --text-size-s: 0.875rem;
+  --text-size-m: 1rem;
+  --text-size-l: 1.125rem;
+  --text-size-xl: 1.25rem;
+  --text-size-xxl: 1.5rem;
 }
 
 html[mode='dark'] {
