--- a/apps/mix-cms/src/styles.scss
+++ b/apps/mix-cms/src/styles.scss
@@ -1,7 +1,13 @@
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
+@import 'node_modules/@ngneat/hot-toast/src/styles/styles.scss';
+@import '~jsoneditor/dist/jsoneditor.min.css';
+@import '~tippy.js/dist/tippy.css';
+@import '~tippy.js/themes/light.css';
+@import '~tippy.js/animations/scale.css';
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
 @import '@taiga-ui/core/styles/taiga-ui-local.scss';
+
+@import './assets/styles/reboot/index.scss';
 @import './assets/styles/spacing.scss';
 @import './assets/styles/variables.scss';
 @import './assets/styles/overwrite-variables.scss';
@@ -12,313 +18,12 @@
 @import './assets/styles/progress-bar.scss';
 @import './assets/styles/tippy.scss';
 @import './assets/styles/notifications.scss';
-
-@import 'node_modules/@ngneat/hot-toast/src/styles/styles.scss';
-@import '~jsoneditor/dist/jsoneditor.min.css';
-
-@import '~tippy.js/dist/tippy.css';
-@import '~tippy.js/themes/light.css';
-@import '~tippy.js/animations/scale.css';
-@import 'ag-grid-community/styles/ag-grid.css';
-@import 'ag-grid-community/styles/ag-theme-alpine.css';
-
-html,
-body {
-  --bs-gutter-x: 0px !important;
-
-  margin: 0 !important;
-  padding: 0 !important;
-  height: 100%;
-  font-family: var(--font);
-  font-feature-settings: 'calt' 0;
-  color: var(--text-color-primary) !important;
-  font-size: var(--text-size-m, 14px);
-}
+@import './assets/styles/dialog.scss';
+@import './assets/styles/dragndrop.scss';
+@import './assets/styles/scrollbar.scss';
+@import './assets/styles/ag-table.scss';
+@import './assets/styles/ultilities.scss';
 
 * {
   box-sizing: border-box;
-}
-
-tui-root {
-  height: 100vh;
-  width: 100vw;
-}
-
-* {
-  ::-webkit-scrollbar {
-    height: 12px;
-    width: 12px;
-    overflow: visible;
-  }
-
-  ::-webkit-scrollbar-button {
-    height: 0;
-    width: 0;
-  }
-
-  ::-webkit-scrollbar-corner {
-    background: transparent;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background-color: var(--background-color-scrollbar);
-  }
-
-  ::-webkit-scrollbar-thumb,
-  ::-webkit-scrollbar-track {
-    background-clip: padding-box;
-    border: 3px solid transparent;
-    border-radius: 100px;
-  }
-
-  ::-webkit-scrollbar-thumb,
-  ::-webkit-scrollbar-track {
-    background-clip: padding-box;
-    border: 3px solid transparent;
-    border-radius: 100px;
-  }
-}
-
-.content-label {
-  cursor: default;
-  font-weight: 500;
-  margin-bottom: 4px !important;
-  font-size: 14px;
-  display: block;
-}
-
-.content-sub-label {
-  opacity: 0.7;
-  font-size: 12px;
-  line-height: 5px;
-}
-
-p {
-  margin-block-start: unset;
-}
-
-a {
-  display: inline-block;
-}
-
-.hoverable {
-  cursor: pointer;
-
-  &:hover {
-    opacity: 0.7;
-  }
-}
-
-.flex-all-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.mix-widget {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--background-color-primary);
-  border-radius: var(--border-radius-default);
-  border: 1px solid var(--border-color-default);
-  overflow: hidden;
-  padding: var(--default-widget-padding);
-  min-height: 100px;
-}
-
-.container,
-.container-fluid,
-.container-lg,
-.container-md,
-.container-sm,
-.container-xl,
-.container-xxl {
-  --bs-gutter-x: 0px !important;
-  --bs-gutter-y: 0;
-}
-
-[tuiWrapper][data-appearance='textfield'] {
-  border-radius: var(--element-rounded) !important;
-  background: var(--background-color-primary);
-  color: var(--text-color-primary);
-}
-
-[tuiWrapper][data-appearance='primary'] {
-  color: var(--button-text-color-primary);
-}
-
-[tuiWrapper][data-appearance='flat'] {
-  color: var(--text-color-primary);
-}
-
-[tuisidebar] .t-wrapper_auto-width {
-  border-top-left-radius: 12px;
-  border-bottom-left-radius: 12px;
-}
-
-.ngx-charts text {
-  fill: var(--text-color-primary);
-}
-
-.jsoneditor {
-  border: thin solid var(--primary-color) !important;
-  border-radius: 5px !important;
-  min-height: 300px;
-}
-.jsoneditor-menu {
-  background-color: var(--primary-color) !important;
-  border-bottom: 1px solid var(--primary-color) !important;
-}
-
-div.jsoneditor-tree {
-  border-radius: var(--element-rounded) !important;
-}
-
-tui-dialog-host {
-  z-index: 9999;
-}
-
-[tuilink] .t-content {
-  display: flex;
-  align-items: center;
-}
-
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  display: table;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-
-  .mix-data-table__td {
-    vertical-align: middle;
-
-    &:nth-of-type(2) {
-      border-top-left-radius: 8px;
-      border-bottom-left-radius: 8px;
-    }
-
-    &:last-of-type {
-      border-top-right-radius: 16px;
-      border-bottom-right-radius: 16px;
-    }
-  }
-
-  .mix-data-table__checkbox {
-    display: none;
-  }
-}
-
-.cdk-drag-placeholder {
-  opacity: 0.6;
-
-  .mix-data-table__td {
-    border-top: 1px dashed var(--primary-color) !important;
-    border-bottom: 1px dashed var(--primary-color) !important;
-
-    &:first-of-type {
-      border-left: 1px dashed var(--primary-color) !important;
-      border-top-left-radius: 6px;
-      border-bottom-left-radius: 6px;
-    }
-
-    &:last-of-type {
-      border-right: 1px dashed var(--primary-color) !important;
-      border-top-right-radius: 6px;
-      border-bottom-right-radius: 6px;
-    }
-  }
-
-  &.task-manage__board-item {
-    opacity: 0.4;
-    border-radius: 6px;
-    border: 1px dashed var(--primary-color) !important;
-  }
-}
-
-.border-left-default {
-  border-left: 1px solid var(--border-color-default);
-}
-
-.border-right-default {
-  border-right: 1px solid var(--border-color-default);
-}
-
-.tippy-variation-tooltip.compress-image-preview {
-  .tippy-box {
-    background-color: unset !important;
-    border: 1px solid var(--border-color-default);
-    border-radius: 8px;
-  }
-}
-
-.remove-padding {
-  fieldset {
-    padding: unset !important;
-  }
-}
-
-tui-dropdown {
-  z-index: 10000 !important;
-}
-
-.hide-image {
-  img {
-    opacity: 0.1;
-  }
-
-  canvas {
-    opacity: 0.1;
-  }
-}
-
-ngneat-dialog {
-  .ngneat-dialog-backdrop {
-    .ngneat-dialog-content {
-      padding: 18px;
-      animation: dialog-open 0.2s cubic-bezier(0.4, 0, 0.2, 1) !important;
-    }
-
-    animation: dialog-open-backdrop 0.2s !important;
-  }
-}
-
-.mix-dialog {
-  &__header {
-    font-size: 18px;
-    margin-bottom: 4px;
-  }
-
-  &__content {
-    margin: 24px 0px;
-  }
-
-  &__footer {
-    margin-top: 4px;
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    justify-content: flex-end;
-  }
-}
-
-.ag-theme-alpine {
-  --ag-borders: none;
-  --ag-border-color: var(--tui-base-04);
-  --ag-borders-critical: 1px solid;
-  --ag-row-border-style: solid;
-  --ag-row-border-width: 1px;
-  --ag-row-border-color: var(--border-color-default);
-  --ag-odd-row-background-color: var(--background-color-primary);
-  --ag-background-color: var(--background-color-primary);
-  --ag-cell-horizontal-border: 1px solid var(--border-color-default);
-  --ag-header-height: 32px;
-  --ag-row-height: 40px;
-  --ag-row-hover-color: rgba(233, 234, 237, 0.5);
-}
-
-tui-dropdown-host {
-  z-index: unset !important;
 }
