--- a/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.scss
+++ b/apps/mix-cms/src/app/components/main-side-menu/main-side-menu.component.scss
@@ -18,7 +18,8 @@
     padding-top: 8px;
 
     &.--active {
-      width: 230px;
+      width: 12vw;
+      min-width: 180px;
       align-items: flex-start;
     }
   }
@@ -29,7 +30,6 @@
 
   &__item-title {
     margin-left: 12px;
-    font-size: 14px;
   }
 
   &__item-toggle {
