--- a/apps/mix-cms/src/assets/styles/tippy.scss
+++ b/apps/mix-cms/src/assets/styles/tippy.scss
@@ -12,6 +12,14 @@
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px !important;
 }
 
+.tippy-variation-tooltip.compress-image-preview {
+  .tippy-box {
+    background-color: unset !important;
+    border: 1px solid var(--border-color-default);
+    border-radius: 8px;
+  }
+}
+
 .mix-menu-item {
   cursor: pointer;
   padding: 0.5rem 1rem;
