--- a/apps/mix-cms/src/app/components/database-select/database-select.component.scss
+++ b/apps/mix-cms/src/app/components/database-select/database-select.component.scss
@@ -31,8 +31,8 @@
     display: flex;
     align-items: center;
     font-weight: 500;
-    gap: 6px;
-    padding: 6px;
+    gap: 0.5rem;
+    padding: 0.5rem;
     border-radius: 4px;
     overflow: hidden;
     cursor: pointer;
