--- a/apps/mix-cms/src/assets/styles/reboot/reboot.hd.scss
+++ b/apps/mix-cms/src/assets/styles/reboot/reboot.hd.scss
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 1660px) {
   html,
   body {
-    font-size: var(--text-size-xs, 0.75rem) !important;
+    font-size: var(--text-size-xs) !important;
   }
 }
