feat(): update endpoint

--- a/apps/mix-cms/src/app/components/user-select/user-select.component.html
+++ b/apps/mix-cms/src/app/components/user-select/user-select.component.html
@@ -9,7 +9,7 @@
               tuiOption>
         <div class="d-flex align-items-center gap-2">
           <tui-avatar [autoColor]="true"
-                      [text]="item.normalizedUserName || ''"
+                      [text]="item.userName || item.email || ''"
                       size="xs"></tui-avatar>
 
           <span class="card-name">{{ item.userName }}</span>
@@ -24,7 +24,7 @@
   <div class="d-flex align-items-center gap-2">
     <ng-container *ngIf="userDataMap[item] as item">
       <tui-avatar [autoColor]="true"
-                  [text]="item.normalizedUserName || ''"
+                  [text]="item.userName || item.email || ''"
                   size="xs"></tui-avatar>
 
       <span class="card-name">{{ item.userName }}</span>
