--- a/apps/mix-cms/src/app/pages/portal/task-manage/components/task-card/task-card.component.html
+++ b/apps/mix-cms/src/app/pages/portal/task-manage/components/task-card/task-card.component.html
@@ -10,7 +10,7 @@
             class="me-2">
         <tui-avatar [autoColor]="true"
                     [rounded]="true"
-                    [text]="userInfo.normalizedUserName || ''"
+                    [text]="userInfo.userName || userInfo.email || ''"
                     size="xs"></tui-avatar>
       </span>
 
