--- a/apps/mix-cms/src/app/pages/portal/task-manage/components/task-filter/task-filter.component.html
+++ b/apps/mix-cms/src/app/pages/portal/task-manage/components/task-filter/task-filter.component.html
@@ -14,7 +14,7 @@
                   [class.--active]="isUserActive(userIds, user.id)"
                   [autoColor]="true"
                   [rounded]="true"
-                  [text]="user.normalizedUserName || ''"
+                  [text]="user.userName || user.email || ''"
                   (click)="filterStore.toggleUserIds(user.id)"
                   size="s"></tui-avatar>
     </ng-container>
