--- a/apps/mix-cms/src/assets/styles/tippy.scss
+++ b/apps/mix-cms/src/assets/styles/tippy.scss
@@ -1,5 +1,7 @@
-.tippy-content {
-  padding: 5px 0px !important;
+.tippy-variation-popper {
+  .tippy-content {
+    padding: 5px 0px !important;
+  }
 }
 
 .tippy-arrow {
