--- a/apps/mix-cms/src/assets/styles/ultilities.scss
+++ b/apps/mix-cms/src/assets/styles/ultilities.scss
@@ -2,13 +2,13 @@
   cursor: default;
   font-weight: 500;
   margin-bottom: 4px !important;
-  font-size: 14px;
+  font-size: var(--text-size-s);
   display: block;
 }
 
 .content-sub-label {
   opacity: 0.7;
-  font-size: 12px;
+  font-size: var(--text-size-xs);
   line-height: 5px;
 }
 
