--- a/apps/mix-cms/src/app/components/main-toolbar/user-navigation/user-navigation.component.html
+++ b/apps/mix-cms/src/app/components/main-toolbar/user-navigation/user-navigation.component.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="mix-menu-item"
-       (click)="hide()">
+       (click)="logout(); hide()">
     {{ 'Logout' }}
   </div>
 </ng-template>
