--- a/libs/mix-ui/src/modal/modal.component.html
+++ b/libs/mix-ui/src/modal/modal.component.html
@@ -3,7 +3,7 @@
   <h3 class="text-2xl"
       [id]="context.id">{{ context.heading }}</h3>
 
-  <section class="mix-modal__content">
+  <section class="mix-modal__content text-l">
     <ng-container *polymorpheusOutlet="$any(context.content) as text; context: context">
       {{ text }}
     </ng-container>
