feat(): update modal text size

--- a/apps/mix-cms/src/app/components/main-toolbar/user-navigation/user-navigation.component.html
+++ b/apps/mix-cms/src/app/components/main-toolbar/user-navigation/user-navigation.component.html
@@ -2,6 +2,10 @@
      [tp]="userMenuTpl"
      tpPlacement="bottom-end"
      tpVariation="popper">
+  <tui-badge class="tui-space_right-2 tui-space_bottom-2"
+             status="success"
+             value="Active"></tui-badge>
+
   <mix-user-avatar *ngIf="userInfo"
                    class="ms-auto"
                    [size]="'s'"
@@ -10,10 +14,32 @@
 
 <ng-template #userMenuTpl
              let-hide>
+  <div class="d-flex p-3 gap-3 align-items-center w-100 justify-content-start">
+    <mix-user-avatar *ngIf="userInfo"
+                     [size]="'l'"
+                     [userInfo]="userInfo"></mix-user-avatar>
+
+    <div>
+      <div class="text-bold text-l">
+        {{ userInfo?.userName }}
+      </div>
+      <div class="text-sub text-s">
+        {{ userInfo?.email }}
+      </div>
+    </div>
+  </div>
+
   <div class="mix-menu-item"
        (click)="hide()">
-    {{ 'Account Information' }}
+    {{ 'Managed Account' }}
   </div>
+
+  <div class="mix-menu-item"
+       (click)="hide()">
+    {{ 'Settings' }}
+  </div>
+
+  <div class="line-break bg-02"></div>
 
   <div class="mix-menu-item"
        (click)="logout(); hide()">
