--- a/apps/mix-cms/src/assets/styles/tippy.scss
+++ b/apps/mix-cms/src/assets/styles/tippy.scss
@@ -25,8 +25,17 @@
 .mix-menu-item {
   cursor: pointer;
   padding: 0.5rem 1rem;
+  font-size: var(--text-size-ss);
 
   &:hover {
     background-color: var(--tui-base-02);
   }
+}
+
+.line-break {
+  width: 100%;
+  height: 0.5px;
+  display: block;
+  content: "";
+  background-color: var(--border-color-default);
 }
