--- a/apps/mix-cms/src/assets/styles/tippy.scss
+++ b/apps/mix-cms/src/assets/styles/tippy.scss
@@ -25,7 +25,7 @@
 .mix-menu-item {
   cursor: pointer;
   padding: 0.5rem 1rem;
-  font-size: var(--text-size-ss);
+  font-size: var(--text-size-s);
 
   &:hover {
     background-color: var(--tui-base-02);
@@ -36,6 +36,6 @@
   width: 100%;
   height: 0.5px;
   display: block;
-  content: "";
+  content: '';
   background-color: var(--border-color-default);
 }
