feat() clean app

--- a/libs/mix-share/src/components/location-controller/location-controller.component.html
+++ b/libs/mix-share/src/components/location-controller/location-controller.component.html
@@ -1,25 +1,29 @@
 <div class="location-controller">
-  <button type="button"
-          aria-label="Backward"
-          [size]="'s'"
-          (click)="location.back()"
-          tuiIconButton
-          appearance="icon"
-          icon="tuiIconArrowLeft"></button>
+  <button
+    type="button"
+    aria-label="Backward"
+    [size]="'s'"
+    (click)="location.back()"
+    tuiIconButton
+    appearance="icon"
+    icon="tuiIconArrowLeft"
+  ></button>
 
-  <button type="button"
-          aria-label="Forward"
-          [size]="'s'"
-          (click)="location.forward()"
-          tuiIconButton
-          appearance="icon"
-          icon="tuiIconArrowRight"></button>
-
+  <button
+    type="button"
+    aria-label="Forward"
+    [size]="'s'"
+    (click)="location.forward()"
+    tuiIconButton
+    appearance="icon"
+    icon="tuiIconArrowRight"
+  ></button>
+  <!--
   <button type="button"
           aria-label="Refresh"
           [size]="'s'"
           (click)="refreshClick()"
           tuiIconButton
           appearance="icon"
-          icon="tuiIconRedo"></button>
+          icon="tuiIconRedo"></button> -->
 </div>
