--- a/apps/mix-database/src/app/pages/portal/dashboard/dashboard.component.html
+++ b/apps/mix-database/src/app/pages/portal/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
     {{ helloPrefix }}, {{ userName$ | async | titlecase }}
   </h1>
 
-  <div class="text-l mt-5">Congratulations, your working progress:</div>
+  <div class="text-l mt-5">Congratulations, your database status:</div>
   <div class="chart__line mt-4">Status</div>
 
   <div class="dashboard-page__chart-tile mt-3">
@@ -22,8 +22,8 @@
             <div class="text-s text-sub">item(s)</div>
           </div>
 
-          <div class="number-chart__title">In Progress</div>
-          <div class="number-chart__sub-title">This month</div>
+          <div class="number-chart__title">Database(s)</div>
+          <div class="number-chart__sub-title">Currently</div>
         </div>
       </div>
 
