--- a/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.scss
+++ b/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.scss
@@ -15,3 +15,28 @@
   gap: 4px;
   padding-left: 4px;
 }
+
+.user-navigation-popup {
+  .tippy-box {
+    max-width: 400px !important;
+    width: 400px !important;
+    border-radius: 28px !important;
+    padding: 12px;
+    box-shadow: 0 4px 8px 3px rgba(0, 0, 0, 0.15), 0 1px 3px rgba(0, 0, 0, 0.3) !important;
+  }
+
+  .mix-menu-item {
+    padding: 10px 24px;
+    font-size: var(--text-size-m);
+    display: flex;
+    align-items: center;
+  }
+
+  .main-menu {
+    margin: 8px;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+      rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  }
+}
