--- a/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
+++ b/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
@@ -20,7 +20,9 @@
 </div>
 
 <ng-template #userMenuTpl let-hide>
-  <div class="d-flex w-100 p-3 gap-3 align-items-center justify-content-start">
+  <div
+    class="d-flex w-100 p-3 gap-3 pt-0 align-items-center justify-content-start"
+  >
     <mix-user-avatar
       *ngIf="userInfo"
       [size]="'xl'"
